=================
Changes for Crate
=================

Unreleased
==========

 - Fix: Fixed a bug where some searchers were not properly closed

 - Fixed a race condition that could cause `DROP TABLE IF EXISTS` to fail if
   the table was concurrently dropped.

 - Fixed a race condition in `ALTER TABLE <partitioned_table>` that could occur
   if a `DELETE FROM <partitioned_table>` was invoked immediately before the
    `ALTER TABLE` statement.

2015/06/16 0.50.0
=================

NOTE: Upgrading from 0.49 or earlier versions requires a full cluster restart

 - Updated crate-admin to 0.13.2 which includes following changes:

    - improved layout for smaller screens

    - improved load graph on overview page

    - display load, cpu usage, disk i/o, process stats and shard information
      on node detail page

    - added columns with partition values on "Partitions" table
      on table detail view

 - Added ``probe_timestamp`` child expressions for os, process, heap, mem, and
   network columns to sys.nodes table

 - Added ``process['cpu']`` column to sys.nodes table

 - Added ``ALTER TABLE ONLY`` statement support.

 - Added unicast host discovery via SRV DNS records

 - Added the ``KILL ALL`` statement which can be used to cancel running
   operations

 - Added new table settings that can be set on ``CREATE TABLE``
   and changed/reset with ``ALTER TABLE``.

 - Added the ``concat`` scalar function and the concat operator ``||``.

 - Updated Elasticsearch to 1.5.2

 - Added the ``IF NOT EXISTS`` clause to the ``CREATE TABLE`` statement

2015/06/16 0.49.3
=================

 - Fixed an issue where ``_raw`` and ``_doc`` in primary key queries
   returned ``NULL``

 - Updated crash to 0.13.0 which includes following changes:

    - Added `dynamic` as output format option

    - Added ``--version`` to cli interface to show crash version and exit

    - Display command help in case the command is not used correctly

    - Display NULL values in mixed mode correctly